cluster/apps/media/squeezebox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squeezebox
  namespace: media
  labels:
    app: squeezebox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: squeezebox
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: squeezebox
      labels:
        app: squeezebox
    spec:
      containers:
        - image: lmscommunity/logitechmediaserver:8.4.0
          name: squeezebox
          ports:
            - name: slimproto
              containerPort: 3483
            - name: slimproto-udp
              containerPort: 3483
              protocol: UDP
            - name: http-frontend
              containerPort: 9000
            - name: http-api
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 3600
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 200m
              memory: 500Mi
          volumeMounts:
            - name: squeezebox
              mountPath: /config
            - name: media
              mountPath: /music
              readOnly: true
              subPath: audio/music
      restartPolicy: Always
      volumes:
        - name: squeezebox
          persistentVolumeClaim:
            claimName: squeezebox
        - name: media
          persistentVolumeClaim:
            claimName: media
