cluster/apps/media/squeezebox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squeezebox
  name: squeezebox-udp
  namespace: media
  annotations: {
    metallb.universe.tf/allow-shared-ip: squeezebox
  }
spec:
  loadBalancerIP: 10.0.1.14
  ports:
    - name: slimproto
      port: 3483
      protocol: UDP
      targetPort: 3483
  selector:
    app: squeezebox
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squeezebox
  name: squeezebox-tcp
  namespace: media
  annotations: {
    metallb.universe.tf/allow-shared-ip: squeezebox
  }
spec:
  loadBalancerIP: 10.0.1.14
  ports:
    - name: slimproto
      port: 3483
      protocol: TCP
      targetPort: 3483
    - name: http-frontend
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: http-api
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: squeezebox
  type: LoadBalancer
