cluster/apps/media/squeezebox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squeezebox
  namespace: media
  annotations:
    haproxy.org/whitelist: "${HAPROXY_WHITELIST}"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "SAMEORIGIN"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
    - host: "squeezebox.${SECRET_PRIVATE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squeezebox-tcp
                port:
                  number: 9000
  tls:
    - secretName: "${SECRET_PRIVATE_DOMAIN_CERT}"
      hosts:
        - "squeezebox.${SECRET_PRIVATE_DOMAIN}"
